@@ -1,0 +1,4 @@
+# language:no
+Egenskap: Mye fin æøå
+  Scenario: Sjekke at argumenter blir pene
+    Når Jæ vø ålsker døtte lændet
