@@ -5,9 +5,9 @@ Feature: Stack
 
   Scenario Outline:
     Given I have an empty stack
-    When I push <x> onto the stack
-    And I push <y> onto the stack
-    And I push <op> onto the stack
+    When I pøsh <x> onto the stack
+    And I pøsh <y> onto the stack
+    And I pøsh <op> onto the stack
     Then the top should be <top>
     And the size should be 1
 
@@ -20,10 +20,10 @@ Feature: Stack
 
   Scenario: Multiply 3 args
     Given I have an empty stack
-    When I push 2 onto the stack
-    And I push 1 onto the stack
-    And I push 4 onto the stack
-    And I push * onto the stack
+    When I pøsh 2 onto the stack
+    And I pøsh 1 onto the stack
+    And I pøsh 4 onto the stack
+    And I pøsh * onto the stack
     Then the top should be 8
     And the size should be 1
     
